// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots CobblestoneHero custom projectName 1`] = `
<div
  class="d:f ai:c jc:c w:100 h:100vh"
>
  <div
    class="typeset contain ta:c nm-t:4xl"
  >
    <img
      alt=""
      class="lazyload"
      src="/_assets/images/cobblestone.png"
    />
     
    <h1>
      Welcome to My Project!
    </h1>
     
    <p>
      
      You should start with the
      
      <a
        href="https://github.com/PebbleRoad/cobblestone"
        noopener=""
        noreferrer=""
        target="_blank"
      >
        <strong>
          README
        </strong>
      </a>
      
      :)
    
    </p>
  </div>
</div>
`;

exports[`Storyshots CobblestoneHero default props 1`] = `
<div
  class="d:f ai:c jc:c w:100 h:100vh"
>
  <div
    class="typeset contain ta:c nm-t:4xl"
  >
    <img
      alt=""
      class="lazyload"
      src="/_assets/images/cobblestone.png"
    />
     
    <h1>
      Welcome to Cobblestone!
    </h1>
     
    <p>
      
      You should start with the
      
      <a
        href="https://github.com/PebbleRoad/cobblestone"
        noopener=""
        noreferrer=""
        target="_blank"
      >
        <strong>
          README
        </strong>
      </a>
      
      :)
    
    </p>
  </div>
</div>
`;

exports[`Storyshots ExampleAxiosFetching 404 1`] = `
<div>
  <!---->
   
  <!---->
   
  <span
    class="fs:i"
  >
    Loading...
  </span>
</div>
`;

exports[`Storyshots ExampleAxiosFetching delayed response 1`] = `
<div>
  <!---->
   
  <!---->
   
  <span
    class="fs:i"
  >
    Loading...
  </span>
</div>
`;

exports[`Storyshots ExampleAxiosFetching invalid url 1`] = `
<div>
  <!---->
   
  <!---->
   
  <span
    class="fs:i"
  >
    Loading...
  </span>
</div>
`;

exports[`Storyshots ExampleAxiosFetching successful response 1`] = `
<div>
  <!---->
   
  <!---->
   
  <span
    class="fs:i"
  >
    Loading...
  </span>
</div>
`;

exports[`Storyshots ExampleLazyLoadedImg default 1`] = `
<article>
  <h1>
    Lorem ipsum dolor sit amet consectetur.
  </h1>
   
  <img
    alt=""
    class="lazyload"
    data-src="/_assets/images/cobblestone.png"
  />
   
  <div>
    <p>
      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi perspiciatis mollitia dolor nostrum ullam itaque fugit at aliquid deleniti maxime?
    </p>
  </div>
</article>
`;

exports[`Storyshots ExampleVueBaseComponent custom label 1`] = `
<label
  class="d:f fld:r ai:c ts:s"
>
  <span
    class="ts:xs fw:bold"
  >
    What's your age?
  </span>
   
  <input
    class="m-x:xs ts:xs p:2xs"
    type="text"
  />
   
  <!---->
</label>
`;

exports[`Storyshots ExampleVueBaseComponent default 1`] = `
<label
  class="d:f fld:r ai:c ts:s"
>
  <span
    class="ts:xs fw:bold"
  >
    Enter numbers only:
  </span>
   
  <input
    class="m-x:xs ts:xs p:2xs"
    type="text"
  />
   
  <!---->
</label>
`;

exports[`Storyshots ExampleVueContainerComponent default 1`] = `
<div
  class="stack-y:m"
>
  <form
    action="#"
  >
    <label
      class="d:f fld:r ai:c ts:s"
    >
      <span
        class="ts:xs fw:bold"
      >
        Enter your age
      </span>
       
      <input
        class="m-x:xs ts:xs p:2xs"
        type="text"
      />
       
      <!---->
    </label>
     
    <label
      class="d:f fld:r ai:c ts:s"
    >
      <span
        class="ts:xs fw:bold"
      >
        Enter your favourite number
      </span>
       
      <input
        class="m-x:xs ts:xs p:2xs"
        type="text"
      />
       
      <!---->
    </label>
     
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
   
  <!---->
</div>
`;
